==> gumby0q/STM32_CAN_HEATING_MONITOR/STM32_CAN_SWITCHER_BOARD/Core/Src/OneWire.c <==
#include <OneWire.h>
#include <stdio.h>
#define OW_0	0x00
#define OW_1	0xff
#define OW_R_1	0xff
#define OW_RESET_TIMEOUT_VALUE (0x00000100U)
#define OW_DATA_SEND_TIMEOUT_VALUE  (0x00000100U)
#define OW_DATA_SEND_BITS_TIMEOUT_VALUE (0x00000200U)

static uint8_t OW_SendBits(uint8_t num_bits)
{

		// HAL_HalfDuplex_EnableTransmitter(&HUARTx);
	// HAL_UART_Transmit_DMA(&HUARTx, ow_buf, num_bits);
		// HAL_HalfDuplex_EnableReceiver(&HUARTx);
	// HAL_UART_Receive_IT(&HUARTx, ow_buf, num_bits, HAL_MAX_DELAY);
	// HAL_UART_Transmit_IT(&HUARTx, ow_buf, num_bits, HAL_MAX_DELAY);
	// HAL_UART_Receive_IT(&HUARTx, ow_buf_rx, num_bits);
	// HAL_UART_Transmit_IT(&HUARTx, ow_buf, num_bits);

	HAL_UART_Receive_DMA(&HUARTx, ow_buf, num_bits);
	HAL_UART_Transmit_DMA(&HUARTx, ow_buf, num_bits);

//	while (HAL_UART_GetState(&HUARTx) != HAL_UART_STATE_READY)
//	{
//		__NOP();
//	}

		uint32_t tickstart = 0U;
		tickstart = HAL_GetTick();

		while(HAL_UART_GetState(&HUARTx) != HAL_UART_STATE_READY) {
			if ((HAL_GetTick() - tickstart) > OW_DATA_SEND_BITS_TIMEOUT_VALUE)
			{
//				return 0;
				return OW_TIMEOUT;
			}
		}

		// memcpy(ow_buf, ow_buf_rx, num_bits);

		return 0;
}

uint8_t OW_Reset(void)
{
	uint8_t ow_presence = 0xf0;
	OW_UART_Init(9600);

	HAL_UART_Receive_DMA(&HUARTx, &ow_presence, 1);
	HAL_UART_Transmit_DMA(&HUARTx, &ow_presence, 1);

	uint32_t tickstart = 0U;
	tickstart = HAL_GetTick();

	while(HAL_UART_GetState(&HUARTx) != HAL_UART_STATE_READY) {
		if ((HAL_GetTick() - tickstart) > OW_RESET_TIMEOUT_VALUE)
		{

		  return OW_TIMEOUT;
		}
	}

	OW_UART_Init(115200);

	if (ow_presence != 0xf0)
	{
		return OW_OK;
	}

	return OW_NO_DEVICE;
}
