==> urock/ihome/trunk/MCU/STM/mcu_main/IAR/Project/FreeRTOS/httpserver_netconn/src/onewire.c <==
#include "onewire.h"

uint8_t OW_Reset() {
	uint8_t ow_presence;
	USART_InitTypeDef USART_InitStructure;
//----Устанавливаем скорость USART для для заданной длины импульса reset
	USART_InitStructure.USART_BaudRate = 9600;
	USART_InitStructure.USART_WordLength = USART_WordLength_8b;
	USART_InitStructure.USART_StopBits = USART_StopBits_1;
	USART_InitStructure.USART_Parity = USART_Parity_No;
	USART_InitStructure.USART_HardwareFlowControl =
			USART_HardwareFlowControl_None;
	USART_InitStructure.USART_Mode = USART_Mode_Tx | USART_Mode_Rx;
	USART_Init(USART_1WIRE, &USART_InitStructure);

	// отправляем 0xf0 на скорости 9600 
	USART_ClearFlag(USART_1WIRE, USART_FLAG_TC); //Очищаем флаг передачи ТС - transfer comlete
	USART_SendData(USART_1WIRE, 0xf0);  //Посылаем reset (0f) в шину 1-wire - сначала передается младший, а потом старший разряды

	while (USART_GetFlagStatus(USART_1WIRE, USART_FLAG_TC) == RESET) {  //Дожидаемся пока не отправим все данные из уарта
          
            #ifdef OW_GIVE_TICK_RTOS
		taskYIELD();
            #endif
	}

	ow_presence = USART_ReceiveData(USART_1WIRE); //После reset устройства на шине должны опустить сигнал в 0
        
//--- Востанавливаем первоначальные установки USART6
	USART_InitStructure.USART_BaudRate = 115200;
	USART_InitStructure.USART_WordLength = USART_WordLength_8b;
	USART_InitStructure.USART_StopBits = USART_StopBits_1;
	USART_InitStructure.USART_Parity = USART_Parity_No;
	USART_InitStructure.USART_HardwareFlowControl =
			USART_HardwareFlowControl_None;
	USART_InitStructure.USART_Mode = USART_Mode_Tx | USART_Mode_Rx;
	USART_Init(USART_1WIRE, &USART_InitStructure);
//--- Проверка на присутствие устройств 1-wire на шине
	if (ow_presence != 0xf0) { // Если устройство откликнулось
		return OW_OK;
	}

	return OW_NO_DEVICE;  //Устройств не найдено
}

void OW_SendBits(uint8_t nbits){
    portBASE_TYPE xStatus;
  
    DMA_DeInit(USART_1WIRE_TX_DMA_STREAM);
    while (DMA_GetCmdStatus(USART_1WIRE_TX_DMA_STREAM) != DISABLE)   //Ожидаем окончания процедуры DeInit        
    {      
    }
    
    DMA_DeInit(USART_1WIRE_RX_DMA_STREAM);
    while (DMA_GetCmdStatus(USART_1WIRE_RX_DMA_STREAM) != DISABLE)   //Ожидаем окончания процедуры DeInit        
    {      
    }
    
    DMA_InitStructureTX_1WIRE.DMA_BufferSize = nbits;
    DMA_InitStructureRX_1WIRE.DMA_BufferSize = nbits;
    DMA_Init(USART_1WIRE_TX_DMA_STREAM, &DMA_InitStructureTX_1WIRE);
    DMA_Init(USART_1WIRE_RX_DMA_STREAM, &DMA_InitStructureRX_1WIRE);

    USART_ClearFlag(USART_1WIRE, USART_FLAG_RXNE | USART_FLAG_TC | USART_FLAG_TXE);    //Обязательно нужно сбрасывать эти флаги
    USART_DMACmd(USART_1WIRE, USART_DMAReq_Tx | USART_DMAReq_Rx, ENABLE);
    
    DMA_ClearFlag(USART_1WIRE_TX_DMA_STREAM, USART_1WIRE_TX_DMA_FLAG_TCIF);  //Обязательно нужно сбрасывать эти флаги  
    DMA_ClearFlag(USART_1WIRE_RX_DMA_STREAM, USART_1WIRE_RX_DMA_FLAG_TCIF);  
    
    DMA_Cmd(USART_1WIRE_TX_DMA_STREAM, ENABLE);
    DMA_Cmd(USART_1WIRE_RX_DMA_STREAM, ENABLE);


    //Взводим таймер, если таймер доходит до 0, то ошибка при передачи и выходим из цикла, чтобы не зависла программа, передаем ошибку на ХОСТ
    xOneWireSendTimer = xTimerCreate("OneWireSendTimer", 1000/portTICK_RATE_MS, pdFALSE, 0, vOneWireSendTimerFunction);
   /* Вьшолнить сброс только первого интервального таймера. * Именно он начнет отсчитывать время сразу после запуска планировщика * Остальные 2 таймера после запуска планировщика останутся в пассивном состоянии. */
    xTimerReset(xOneWireSendTimer, 0);
    send_timer = 0;
       
    while((DMA_GetFlagStatus(USART_1WIRE_TX_DMA_STREAM, USART_1WIRE_TX_DMA_FLAG_TCIF) == RESET)&&(DMA_GetFlagStatus(USART_1WIRE_RX_DMA_STREAM, USART_1WIRE_RX_DMA_FLAG_TCIF) == RESET)&&(send_timer == 0));

    //    Без таймера программа может зависнуть в этом месте
    while ((USART_GetFlagStatus(USART_1WIRE, USART_FLAG_TC) == RESET)&&(send_timer == 0))
      {
      }
    //--- Останавливаем и удаляем таймер ---------
//    xStatus = xTimerStop(xOneWireSendTimer,100);
//    if (send_timer == 1){
//    	msg_dbg(("Error in recieve data on 1-wire bus \n"));
//    }
//    xStatus = xTimerDelete(xOneWireSendTimer, 100);
    
    DMA_ClearFlag(USART_1WIRE_TX_DMA_STREAM, USART_1WIRE_TX_DMA_FLAG_HTIF | USART_1WIRE_TX_DMA_FLAG_TCIF);    //Очищаем флаги ДМА
    DMA_ClearFlag(USART_1WIRE_RX_DMA_STREAM, USART_1WIRE_RX_DMA_FLAG_HTIF | USART_1WIRE_RX_DMA_FLAG_TCIF);    //Очищаем флаги ДМА    
    DMA_Cmd(USART_1WIRE_TX_DMA_STREAM, DISABLE);
    DMA_Cmd(USART_1WIRE_RX_DMA_STREAM, DISABLE);
    
    USART_DMACmd(USART_1WIRE, USART_DMAReq_Tx | USART_DMAReq_Rx, DISABLE);  // Конец работы для UART
}
